# later

./: Cargo.toml  README.md  dev.sh  update-tailwind-cli.sh
.devcontainer/: devcontainer.json
locales/de/: main.ftl
locales/en/: main.ftl
src/: i18n.rs  log.rs  main.rs
src/i18n/: bundle.rs  filters.rs  lang.rs  mod.rs  translations.rs  translator.rs
static/styles/: site.css
templates/: base.html  hello.html
