[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
askama = "0.12"
askama_axum = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }