[package]
name = "later-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-extra = "0.7"
askama = "0.12"
askama_axum = "0.3"
fluent = "0.16"
fluent-bundle = "0.15"
listenfd = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
